--- a/WebContent/WEB-INF/zul/schema/autocompletion.zul
+++ b/WebContent/WEB-INF/zul/schema/autocompletion.zul
@@ -14,8 +14,8 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="window"
-	apply="com.jaeksoft.searchlib.web.controller.schema.AutoCompletionComposer">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('auto') @init('com.jaeksoft.searchlib.web.controller.schema.AutoCompletionComposer')">
 	<panel title="Auto-completion" border="normal">
 		<panelchildren>
 			<grid sizedByContent="true">
@@ -27,36 +27,38 @@
 				<rows>
 					<row>
 						<label value="Field source" />
-						<listbox model="@{window$composer.fieldList}"
-							mold="select" selectedItem="@{window$composer.field}">
-							<listitem self="@{each=field}"
-								label="@{field.name}" />
+						<listbox model="@load(auto.fieldList)"
+							mold="select" selectedItem="@bind(auto.field)">
+							<template name="model" var="field">
+								<listitem label="@load(field.name)" />
+							</template>
 						</listbox>
 						<label
 							value="Select which field will be used to populate the auto-completion" />
 					</row>
 					<row>
 						<label value="Number of suggestion" />
-						<intbox value="@{window$composer.rows}" />
+						<intbox value="@bind(auto.rows)" />
 						<label
 							value="Set how many suggestions will be submitted" />
 					</row>
 					<row>
 						<label value="Build status" />
 						<label
-							value="@{window$composer.autoCompletionManager.buildThread.status}" />
+							value="@load(auto.autoCompletionManager.buildThread.status)" />
 						<label value="The status of the build process" />
 					</row>
 					<row>
 						<label value="Number of terms" />
 						<label
-							value="@{window$composer.autoCompletionManager.buildThread.indexNumDocs}" />
+							value="@load(auto.autoCompletionManager.buildThread.indexNumDocs)" />
 						<label
 							value="The number of terms in the auto-completion index" />
 					</row>
 					<row>
 						<label value="Testing" />
-						<combobox id="combo" cols="50" autodrop="true"
+						<combobox cols="50" autodrop="true" apply=""
+							model="@load(auto.comboList)" onChanging="@command('onChanging')"
 							buttonVisible="false" />
 						<label
 							value="Enter any text here to test the autocompletion" />
@@ -65,10 +67,12 @@
 				<foot>
 					<footer span="3">
 						<hbox align="center" width="100%">
-							<button label="Save" forward="onSave" />
+							<button label="Save"
+								onClick="@command('onSave')" />
 							<space />
-							<button label="Build" forward="onBuild"
-								disable="@{window$composer.autoCompletionManager.buildThread.running}" />
+							<button label="Build"
+								onClick="@command('onBuild')"
+								disabled="@load(auto.autoCompletionManager.buildThread.running)" />
 						</hbox>
 					</footer>
 				</foot>
@@ -76,5 +80,6 @@
 		</panelchildren>
 	</panel>
 	<timer id="timer" delay="5000" repeats="true"
-		running="@{window$composer.autoCompletionManager.buildThread.running}" />
+		running="@load(auto.autoCompletionManager.buildThread.running)"
+		onTimer="@command('reload')" />
 </window>
